src/sass/components/_footer.scss
.footer {
  margin: auto;
  box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
  @include mobile {
    width: 320px;
  }

  @include tablet {
    width: 768px;
  }

  @include desktop {
    max-width: 1680px;
  }
}

.footer-request {
  padding-top: 50px;
  padding-bottom: 50px;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-color: #111518;

  & h2 {
    font-weight: 800;
    font-size: 14px;
    line-height: 1.36;
    text-align: center;
    letter-spacing: 0.03em;
    color: $fourth-text-color;
  }

  & p {
    font-weight: 600;
    font-size: 12px;
    line-height: 15px;
    text-align: center;
    letter-spacing: 0.08em;
    color: $fourth-text-color;
  }

  .color-text {
    color: $accent-color;
  }

  @include mobile {
    background-image: linear-gradient(
        rgba(11, 15, 18, 0.4) 0%,
        rgba(11, 15, 18, 0.4) 100%
      ),
      url(../images/mobile/footer_background-320.png);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;

    @media screen and (min-device-pixel-ratio: 2) and (max-width: 480px),
      screen and (-webkit-min-device-pixel-ratio: 2) and (max-width: 480px),
      screen and (-o-min-device-pixel-ratio: 2/1) and (max-width: 480px) {
      background-image: linear-gradient(
          rgba(11, 15, 18, 0.4) 0%,
          rgba(11, 15, 18, 0.4) 100%
        ),
        url(../images/mobile/footer_background-320@2x.png);
    }

    & h2 {
      font-size: 14px;
      margin-top: 0;
      margin-bottom: 30px;
      // padding-left: 20px;
      // padding-right: 20px;
    }

    & p {
      font-size: 12px;
      margin-top: 0;
      margin-bottom: 30px;
      // padding-left: 20px;
      // padding-right: 20px;
    }
  }

  @include tablet {
    padding-top: 50px;
    padding-bottom: 71px;
    background-repeat: no-repeat;
    background-image: linear-gradient(
        rgba(11, 15, 18, 0.4) 0%,
        rgba(11, 15, 18, 0.4) 100%
      ),
      url(../images/tablet/footer_background-768.png);
    @media screen and (min-device-pixel-ratio: 2),
      screen and (-webkit-min-device-pixel-ratio: 2),
      screen and (-o-min-device-pixel-ratio: 2/1) {
      background-image: linear-gradient(
          rgba(11, 15, 18, 0.4) 0%,
          rgba(11, 15, 18, 0.4) 100%
        ),
        url(../images/tablet/footer_background-768@2x.png);
    }

    & h2 {
      font-size: 26px;
      line-height: 1.3;
      // padding-left: 40px;
      // padding-right: 40px;
      margin: 0;
      margin-bottom: 30px;
    }

    & p {
      font-size: 14px;
      line-height: 17px;
      padding-left: 110px;
      padding-right: 110px;
      margin: 0;
      margin-bottom: 40px;
    }
  }

  @include desktop {
    padding-top: 100px;
    padding-bottom: 62px;
    background-repeat: no-repeat;
    background-image: linear-gradient(
        rgba(11, 15, 18, 0.4) 0%,
        rgba(0, 5, 8, 0.897) 100%
      ),
      url(../images/desktop/footer_background-1200.png);
    @media screen and (min-device-pixel-ratio: 2),
      screen and (-webkit-min-device-pixel-ratio: 2),
      screen and (-o-min-device-pixel-ratio: 2/1) {
      background-image: linear-gradient(
          rgba(11, 15, 18, 0.4) 0%,
          rgba(11, 15, 18, 0.4) 100%
        ),
        url(../images/desktop/footer_background-1200@2x.png);
    }

    & h2 {
      margin: 0;
      margin-bottom: 50px;
      font-size: 46px;
      padding-left: 110px;
      padding-right: 110px;
    }

    & p {
      font-size: 30px;
      line-height: 37px;
      padding-left: 170px;
      padding-right: 170px;
      margin: 0;
      margin-bottom: 56px;
    }
  }
}

@import './components/_footer-subscribe-form.scss';

.footer-contacts {
  display: flex;
  flex-wrap: wrap;

  @include mobile {
    justify-content: center;
  }

  @include tablet {
    flex-wrap: nowrap;
    justify-content: baseline;
  }

  @include desktop {
    flex-wrap: nowrap;
    justify-content: baseline;
  }
}

.footer-logo {
  padding-top: 34px;
  padding-bottom: 20px;

  @include mobile {
  }

  @include tablet {
    padding-top: 40px;
    padding-bottom: 40px;
  }

  @include desktop {
    padding-top: 52px;
    padding-bottom: 52px;
  }
}

.footer-number {
  position: relative;
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  line-height: 1.21;
  letter-spacing: 0.08em;
  text-align: center;
  color: $second-bg-color;
  padding-top: 21px;

  &::before {
    content: '';
    left: -30px;
    right: 10px;
    position: absolute;
    top: 20%;
    transform: translateY(-50%);
    display: block;
    background: url('./../images/icon/icon_mobile-320.svg') no-repeat;
    width: 20px;
    height: 20px;
  }

  &::after {
    content: '';
    top: 60%;
    position: absolute;
    transform: translateY(-50%);
    left: 40%;
    width: 40px;
    height: 40px;
    background: url('./../images/icon/icon_instagram.svg') no-repeat;
  }

  @include mobile {
    padding-bottom: 101px;
  }

  @include tablet {
    font-size: 20px;
    line-height: 1.2;
    padding-left: 236px;
    padding-top: 51px;

    &::before {
      content: '';
      left: 202px;
      width: 24px;
      height: 24px;
      top: 47%;
      background: url('./../images/icon/icon_mobile-768.svg') no-repeat;
    }

    &::after {
      content: '';
      top: 50%;
      position: absolute;
      transform: translateY(-50%);
      left: 105%;
      width: 40px;
      height: 40px;

      border-right-style: 1px solid;
      background: url('./../images/icon/icon_instagram.svg') no-repeat;
    }
  }

  @include desktop {
    font-size: 30px;
    line-height: 1.23;
    padding-top: 56px;
    padding-left: 335px;

    &::before {
      content: '';
      top: 50%;
      transform: translateY(-50%);
      left: 290px;
      right: 15px;
      width: 30px;
      height: 30px;
      background: url('./../images/icon/icon_mobile.svg') no-repeat;
    }

    &::after {
      content: '';
      top: 50%;
      transform: translateY(-50%);
      left: 740px;
      width: 40px;
      height: 40px;
      background: url('./../images/icon/icon_instagram.svg') no-repeat;
    }
  }

  a {
    color: inherit;

    @include tablet {
      &::after {
        content: '';
        top: 50%;
        transform: translateY(-50%);
        padding-left: 26px;
        width: 1px;
        height: 40px;
        border-right: 1px solid $primary-text-color;
      }
    }

    @include desktop {
      &::after {
        content: '';
        top: 50%;
        transform: translateY(-50%);
        padding-left: 16px;
        width: 1px;
        height: 40px;
        border-right: 1px solid $primary-text-color;
      }
    }
  }
}

.footer-copyright {
  font-style: normal;
  font-weight: 500;

  display: flex;
  align-items: center;
  text-align: center;
  vertical-align: center;
  color: $primary-text-color;
  background-color: $second-bg-color;
  padding-top: 22px;
  padding-bottom: 21px;
  font-size: 14px;
  line-height: 2;

  @include tablet {
    text-align: left;
  }

  @include desktop {
    text-align: left;
  }
}

